<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <TextView
            android:text="@string/team_1"
            style="@style/textAppearance" />

        <ImageView
            android:id="@+id/decreaseTeam1"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_background"
            android:contentDescription="@string/minus_button"
            android:onClick="decreaseScore"
            style="@style/MinusButtons" />

        <ImageView
            android:id="@+id/increaseTeam1"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="307dp"
            android:layout_marginTop="139dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/plus_button"
            android:onClick="increaseScore"
            style="@style/PlusButtons"  />

        <TextView
            android:id="@+id/score_1"
            android:text="@string/initial_count"
            style="@style/scoreTextAppearance" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/team_2"
            style="@style/textAppearance" />

        <ImageView
            android:id="@+id/decreaseTeam2"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="141dp"
            android:layout_marginBottom="138dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/minus_button"
            android:onClick="decreaseScore"
            style="@style/MinusButtons"/>

        <ImageView
            android:id="@+id/increaseTeam2"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="308dp"
            android:layout_marginTop="141dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/plus_button"
            android:onClick="increaseScore"
            style="@style/PlusButtons" />

        <TextView
            android:id="@+id/score_2"
            android:text="@string/initial_count"
            style="@style/scoreTextAppearance" />

    </RelativeLayout>



</LinearLayout>